--- a/charts/telegram-gateway/values.yaml
+++ b/charts/telegram-gateway/values.yaml
@@ -11,6 +11,10 @@ telegram:
 cluster:
   name: ""
 
+service:
+  type: ClusterIP
+  name: telegram-gateway
+
 urls:
   alertmanager: "https://test"
   prometheus: "https://test"
