--- a/charts/telegram-gateway/templates/pdb.yaml
+++ b/charts/telegram-gateway/templates/pdb.yaml
@@ -3,7 +3,7 @@ kind: PodDisruptionBudget
 metadata:
   name: telegram-gateway
 spec:
-  minAvailable: {{ int .Values.pdb.minAvailable | quote }}
+  minAvailable: {{ int .Values.pdb.minAvailable }}
   selector:
     matchLabels:
       app: telegram-gateway
