--- a/charts/telegram-gateway/templates/pdb.yaml
+++ b/charts/telegram-gateway/templates/pdb.yaml
@@ -1,9 +1,9 @@
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  name: {{ .Chart.Name | quote }}
+  name: {{ .Release.Name | quote }}
 spec:
   minAvailable: {{ .Values.pdb.minAvailable }}
   selector:
     matchLabels:
-      app: {{ .Chart.Name | quote }}
+      app: {{ .Release.Name | quote }}
