--- a/charts/telegram-gateway/templates/telegram-gateway.yaml
+++ b/charts/telegram-gateway/templates/telegram-gateway.yaml
@@ -37,7 +37,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.name | quote }}
+  name: {{ .Release.Name | quote }}
   labels:
     app: {{ .Release.Name | quote }}
 spec:
