--- a/charts/telegram-gateway/templates/telegram-gateway.yaml
+++ b/charts/telegram-gateway/templates/telegram-gateway.yaml
@@ -1,65 +1,81 @@
-{{- range $index,$telegram := .Values.telegram }}
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .name | quote }}
+  name: telegram-gateway
   labels:
-    app: {{ .name | quote }}
+    app: telegram-gateway
 spec:
   selector:
     matchLabels:
-      app: {{ .name | quote }}
-  replicas: {{ $.Values.replicas }}
+      app: telegram-gateway
+  replicas: {{ .Values.replicas }}
   template:
     metadata:
       labels:
-        app: {{ .name | quote }}
-        chart-version: {{ $.Chart.Version | quote }}
+        app: telegram-gateway
     spec:
+      topologySpreadConstraints:
+{{ toYaml .Values.topologySpreadConstraints | indent 7 }}
+      affinity:
+{{ toYaml .Values.affinity | indent 7 }}
+      volumes:
+      - name: telegram-gateway-config
+        configMap:
+          name: telegram-gateway-config
       containers:
       - name: telegram-gateway
         resources:
-{{ toYaml $.Values.resources | indent 9 }}
-        image: {{ $.Values.registry.image }}
-        imagePullPolicy: {{ $.Values.registry.imagePullPolicy }}
+{{ toYaml .Values.resources | indent 9 }}
+        image: {{ .Values.registry.image }}
+        imagePullPolicy: {{ .Values.registry.imagePullPolicy }}
         command:
-        - telegram-gateway
-        - --alertmanager.url={{ .urls.alertmanager }}
-        - --prometheus.url={{ .urls.prometheus }}
-        - --cluster.name={{ .cluster_name }}
+        - /usr/local/bin/telegram-gateway
+        - -config=/config/telegram-gateway.yaml
+{{- if .Values.args }}
+{{ toYaml .Values.args | indent 8 }}
+{{- end }}
         env:
-        - name: "CHAT_TOKEN"
-          value: {{ .token | quote }}
-        - name: "CHAT_ID"
-          value: {{ int .chat_id | quote }}
+{{ toYaml .Values.env | indent 9 }}
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 9090
+          initialDelaySeconds: 3
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 9090
+          initialDelaySeconds: 10
+          periodSeconds: 10
         ports:
         - containerPort: 9090
+        volumeMounts:
+        - name: telegram-gateway-config
+          mountPath: "/config/"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .name | quote }}
+  name: telegram-gateway
   labels:
-    app: {{ .name | quote }}
-    chart-version: {{ $.Chart.Version | quote }}
+    app: telegram-gateway
 spec:
-  type: {{ $.Values.service.type | quote }}
+  type: {{ .Values.service.type }}
   ports:
   - port: 9090
     protocol: TCP
   selector:
-    app: {{ .name | quote }}
+    app: telegram-gateway
 ---
-{{- if $.Values.pdb.enabled }}
+{{- if .Values.pdb.enabled }}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  name: {{ .name | quote }}
+  name: telegram-gateway
 spec:
-  minAvailable: {{ $.Values.pdb.minAvailable }}
+  minAvailable: {{ .Values.pdb.minAvailable }}
   selector:
     matchLabels:
-      app: {{ .name | quote }}
-{{- end }}
+      app: telegram-gateway
 {{- end }}
